Fix high contrast visited link color and quantity input padding
Change visited link color from #88CCFF to #CC99FF (light purple) in high
contrast mode for better distinction from unvisited links. Fix quantity
input number cutoff on single product pages. Add v2.1.0 changelog to
readme.txt.

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ along with Klaro. If not, see http://www.gnu.org/licenses/gpl-2.0.html.
   --color-background: #000000;
   --color-text: #FFFFFF;
   --color-link: #00D4FF;
-  --color-link-visited: #88CCFF;
+  --color-link-visited: #CC99FF;
   --color-link-hover: #FFFFFF;
   --color-focus: #FFFF00;
   --color-border: #FFFFFF;
